[package]
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2018"
name = "rrbg"
version = "0.1.1"
[dependencies]
dotenv = "0.14.1"
env_logger = "0.7.0"
envy = "0.4.0"
glob = "0.3.0"
imagesize = "0.8.0"
log = "0.4.8"
rand = "0.7.2"
rayon = "1.2.0"
serde = "1.0.101"
serde_derive = "1.0.99"
dirs = "2.0.2"
failure = "0.1.5"
serde_json = "1.0.40"
clap = { version = "2.33.0", features = ["yaml"] }
sdl2 = "0.32.2"
directories = "2.0.2"

[profile.release]
lto = "thin"
opt-level = "z"
