[package]
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2018"
name = "rrbg"
version = "0.1.1"
[dependencies]
dotenv = "0.15.0"
env_logger = "0.7.1"
envy = "0.4.1"
glob = "0.3.0"
imagesize = "0.8.1"
log = "0.4.8"
rand = "0.7.3"
rayon = "1.3.0"
serde = "1.0.106"
serde_derive = "1.0.106"
dirs = "2.0.2"
failure = "0.1.7"
serde_json = "1.0.50"
clap = { version = "2.33.0", features = ["yaml"] }
sdl2 = "0.33.0"
directories = "2.0.2"

[profile.release]
lto = "thin"
opt-level = "z"
